# elf004GH_vault_awesome_well_structure

./: .gitignore  LICENSE  MANIFEST.in  Prompt.md  README.md  main.py  main_origin.py  pyproject.toml  requirements.txt  well_data.json  well_data_sample.json  well_structure_plot.py
src/07_awesome_well_mcp/: __init__.py
src/awesome_well_mcp/: __init__.py  main.py
templates/: well_data（导向井） .json  well_data（导眼井）.json  well_data（水平井）.json
