[project]
name = "awesome-well-mcp"
version = "1.0.1"
description = "井身结构图生成器 MCP 服务 - 基于井数据自动生成井身结构图"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.16.0",
]
authors = [
    {name = "awesome-well-mcp team", email = "contact@awesome-well-mcp.com"}
]
keywords = ["mcp", "well", "structure", "generator", "petroleum", "drilling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
awesome-well-mcp = "awesome_well_mcp.main:main"

[project.urls]
Homepage = "https://github.com/awesome-well-mcp/awesome-well-mcp"
Repository = "https://github.com/awesome-well-mcp/awesome-well-mcp"
Documentation = "https://github.com/awesome-well-mcp/awesome-well-mcp#readme"
Issues = "https://github.com/awesome-well-mcp/awesome-well-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/awesome_well_mcp"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.wheel.include]
"src/awesome_well_mcp/*.exe" = "awesome_well_mcp/"
"src/awesome_well_mcp/templates/*.json" = "awesome_well_mcp/templates/"
